<resources>
    <string name="app_name">ShabbatReadingsApplication</string>
    <string name="full_app_name">Messianic Shabbat Readings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shabbat Readings</string>
    <string name="nav_header_subtitle">how2geek.co.za</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ffoz">First Fruits Of Zion</string>
    <string name="title_activity_shabbat_reading">Shabbat Readings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_links">Links</string>
    <string name="title_fragment_bible_settings">Bible App Settings</string>
    <string name="mysword_bible_settings">MySword Bible Setup</string>
    <string name="mysword_bible_explanation">
        This guide will tell you how to download The Scriptures Bible translation, as well as the Hebrew interpolated Study Bible.\n
        \n1. When opening for the first time, press OK and Allow Storage Permission to download your required modules.\n
        2. Once the app is loaded, click the Settings cog in the middle of the shortcut bar at the bottom of the screen and then select \'Download Modules\'.\n
        3. Click the \'BIBLE\' button on the top right and select \'English\' to display the different English translations available.\n
        4. Scroll to and check \'TS2009 - The Scriptures 2009\', then press \'OK\'.\n
        5. Select \'Bible\' again and select \'Interlinear\' and scroll to and check \'HiSB\: Hebrew interpolated Study Bible.\n
        6. Then, click the \'FONT\' button on the \'Download Modules\' page and select \'Most Complete - with accented Greek, for TS2009\'.\n
        7. Select the font of your choice, otherwise check the first option.\n
        8. Select \'START DOWNLOADING\'.
    </string>
    <string name="title_activity_feasts">Appointed Times</string>
    <string name="title_fragment_bookmarks">Bible Bookmark</string>
    <string name="header_torah">Torah Readings\:</string>
    <string name="header_haftarah">Haftarah Readings\:</string>
    <string name="header_gospel">Gospel Readings\:</string>
    <string name="andrew_hodkinson_youtube">Andrew Hodkinson Youtube channel</string>
    <string name="beth_tikkun_audio_links">Beth Tikkun Media</string>
    <string name="the_creation_gospel">The Creation Gospel</string>
    <string name="ffoz">First Fruits of Zion</string>
    <string name="firm">FIRM Israel</string>
    <string name="llm">Lion and Lamb Ministries</string>
    <string name="how_to_geek">howtogeek.co.za</string>
    <string name="blue_light_danger">Blue Light Danger</string>
    <string name="quick_quality_coffee">Quick quality coffee</string>
    <string name="ffoz_youtube">First Fruits of Zion Youtube channel</string>
    <string name="firm_youtube">FIRM Youtube channel</string>
    <string name="grant_luton_youtube">Grant Luton Youtube channel</string>
    <string name="hollisa_alewine_youtube">Dr. Hollisa Alewine Youtube channel</string>
    <string name="beth_tikkun_youtube">Beth Tikkun Youtube channel</string>
    <string name="lion_lamb_youtube">Lion and Lamb Youtube channel</string>
    <string name="torah_today_ministries">Torah Today Ministries</string>
    <string name="youversion_links">The readings found on the “Additional Readings” page are part of a cycle to read through all the Scriptures in a Biblical year. \n The cycle follows the weekly Torah parashot and the full cycle will start in Genesis in next Biblical year. \n There are many different translations and the translations may contain different chapters to the chapters listed. \n Please leave a comment if you know of a better translation to use for any language.</string>
    <string name="bible_settings_string">In recent releases of Android, the default app settings might need to be amended for the verses to be opened by the Bible apps instead of the browser. \nThis can be achieved by following these steps:\n \n 1: Open Settings on your Android device.\n 2: Select the "Apps" tab.\n \n For the MySword Bible:\n 1: Tap Open supported Links if it is unchecked.\n 2: Select the "Set as default" tab.\n 3: Tap "Supported web addresses".\n 4: Make sure "mysword.info" as well as "mysword-bible info" are checked.\n \n For the Bible App:\n 1: Tap Open supported Links if it is unchecked.\n 2: Select the "Set as default" tab.\n 3: Tap "Supported web addresses".\n 4: Scroll to the bottom of the links.\n 5: Make sure "bible.com" is checked.\n </string>
    <string name="image_decription">Link to app on Play Store</string>
    <string name="ffoz_shortcut">First Fruit of Zion Shabbat cycle</string>
    <string name="llm_shortcut">Lion and Lamb Shabbat cycle</string>
    <string name="home_summary">This app contains 2 different shabbat reading cycles, with the main difference being that the 1 cycle reads through only the gospel books of the New Testament, while the other cycle includes books from throughout the New Testament.</string>
    <string name="title_activity_moed">MoedActivity</string>
    <string name="title_activity_you_version_shabbat_readings">YouVersionShabbatReadingsActivity</string>
    <string name="my_sword_bible">MySword Bible</string>
    <string name="youversion_bible">YouVersion</string>
    <string name="youversion_english">English</string>
    <string name="youversion_hcsb_english">English HCSB</string>
    <string name="youversion_xhosa">Xhosa</string>
    <string name="youversion_afrikaans">Afrikaans</string>
    <string name="youversion_zulu">Zulu</string>
    <string name="youversion_northen_sotho">Northern Sotho</string>
    <string name="youversion_tsonga">Tsonga</string>
    <string name="youversion_southern_ndebele">Southern Ndebele</string>
    <string name="first_fruits_of_zion">First Fruits of Zion</string>
    <string name="additional_readings">Additional Readings</string>
    <string name="parasha_page">Parsha Page</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="bible_choice_string">Please choose a Bible above</string>
    <string name="tablet_edition">tablet edition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bible_translation_selection">YouVersion Bible Translation</string>
    <string name="you_version_northern_sotho">Northern Sotho</string>
    <string name="you_version_tsonga">Tsonga</string>
    <string name="you_version_southern_ndebele">Southern Ndebele</string>
    <string name="save">Save</string>
    <string name="bible_choice">YouVersion Bible Translation</string>
    <string name="english">English</string>
    <string name="youversion_bible_translation">YouVersion Bible Translation</string>
    <string-array name="my_sword_setup_steps">
        <item>This guide will tell you how to download The Scriptures Bible translation, as well as the Hebrew interpolated Study Bible.</item>
        <item>When opening for the first time, press OK and Allow Storage Permission to download your required modules.</item>
        <item>Once the app is loaded, click the Settings cog in the middle of the shortcut bar at the bottom of the screen and then select \'Download Modules\'.</item>
        <item>Click the \'BIBLE\' button on the top right and select \'English\' to display the different English translations available.</item>
        <item>Scroll to and check \'TS2009 - The Scriptures 2009\', then press \'OK\'</item>
        <item>Select \'Bible\' again and select \'Interlinear\' and scroll to and check \'HiSB\: Hebrew interpolated Study Bible.</item>
        <item>Then, click the \'FONT\' button on the \'Download Modules\' page and select \'Most Complete - with accented Greek, for TS2009\'</item>
        <item>Select the font of yo0ur choice, otherwise check the first option.</item>
        <item>Select \'START DOWNLOADING\'</item>

    </string-array>
    <string-array name="youversion_ts2009_translations">
        <item>English TS2009</item>
        <item>https://bible.com/bible/316/</item>
        <item>.TS2009</item>
    </string-array>
    <string-array name="youversion_nasb_translations">
        <item>English NASB</item>
        <item>https://bible.com/bible/12/</item>
        <item>.ASV</item>
    </string-array>
    <string-array name="youversion_hcsb_translations">
        <item>English HCSB</item>
        <item>https://bible.com/bible/72/</item>
        <item>.HCSB</item>
    </string-array>
    <string-array name="youversion_xhosa_translations">
        <item>Xhosa</item>
        <item>https://www.bible.com/bible/281/</item>
        <item>.XHO75</item>
    </string-array>
    <string-array name="youversion_zulu_translations">
        <item>Zulu</item>
        <item>https://www.bible.com/bible/286/</item>
        <item>.ZUL59</item>
    </string-array>
    <string-array name="youversion_afrikaans_translations">
        <item>Afrikaans</item>
        <item>https://www.bible.com/bible/6/</item>
        <item>.AFR83</item>
    </string-array>
    <string-array name="youversion_northern_sotho_translations">
        <item>Northern Sotho</item>
        <item>https://www.bible.com/bible/607/</item>
        <item>.CSEB24</item>
    </string-array>
    <string-array name="youversion_tsonga_translations">
        <item>Tsonga</item>
        <item>https://bible.com/bible/607/</item>
        <item>.TSO29</item>
    </string-array>
    <string-array name="youversion_southern_ndebele_translations">
        <item>Southern Ndebele</item>
        <item>https://bible.com/bible/450/</item>
        <item>.SND12</item>
    </string-array>
    <string-array name="youversion_arabic_sab_translation">
        <item>Arabic SAB</item>
        <item>https://www.bible.com/bible/153/</item>
        <item>.SAB</item>
    </string-array>
    <string-array name="youversion_german_schlacter_bible_translation">
        <item>Schlachter 2000 (German)</item>
        <item>https://www.bible.com/bible/157/</item>
        <item>.SCH2000</item>
    </string-array>
    <string-array name="youversion_translations">
        <item>English TS2009</item>
        <item>English NASB</item>
        <item>English HCSB</item>
        <item>Xhosa</item>
        <item>Zulu</item>
        <item>Afrikaans</item>
        <item>Northern Sotho</item>
        <item>Tsonga</item>
        <item>Southern Ndebele</item>
        <item>Sharif Arabic Bible</item>
        <item>Schlachter 2000 (German)</item>
    </string-array>
    <string name="torah_readings_placeholder">Torah\nReadings</string>
    <string name="haftarah_readings_placeholder">Torah\nReadings</string>
    <string name="britchadashah_readings_placeholder">Brit\nChadashah\nReadings</string>
    <string name="messianic_bereisheet_readings">Messianic Bereisheet Readings</string>
    <string name="gregorian_date">Gregorian Date:</string>
    <string name="biblical_date">Biblical Date:</string>
    <string name="gregorian_date_placeholder">[Gregorian date]</string>
    <string name="biblical_date_placeholder">[Biblical date]</string>
    <string name="parsha_name">[parsha name]</string>
    <string name="torah">\nTorah</string>
    <string name="haftarah">\nHaftarah</string>
    <string name="brit_chadashah">Brit\nChadashah</string>
</resources>