<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCCCCD"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:text="@string/youversion_bible_translation"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/englishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_english"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/englishHCSBButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_hcsb_english"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/xhosaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_xhosa"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/afrikaansButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_afrikaans"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/zuluButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_zulu"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/northernSothoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_northen_sotho"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/tsongaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_tsonga"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

    <TextView
        android:id="@+id/southernNdebeleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youversion_southern_ndebele"
        android:textAlignment="center"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="#121111"/>

</LinearLayout>